--- a/GDEW042T2.build_log.htm
+++ b/GDEW042T2.build_log.htm
@@ -22,20 +22,23 @@ Dialog DLL:      TCM.DLL V1.36.1.0
  
 <h2>Project:</h2>
 C:\Users\petef\home\2020-fall\embedded\eink\GDEW042T2.uvprojx
-Project File Date:  10/25/2020
+Project File Date:  11/16/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'GDEW042T2'
-compiling font.c...
 assembling startup.s...
+compiling font.c...
+compiling dsp.c...
 compiling epdgl.c...
-compiling LaunchPad.c...
+compiling fifo.c...
 compiling PLL.c...
-compiling gdew042t2.c...
+compiling LaunchPad.c...
 compiling main.c...
+compiling gdew042t2.c...
+compiling keypad.c...
 linking...
-Program Size: Code=5084 RO-data=20560 RW-data=24 ZI-data=16024  
+Program Size: Code=3424 RO-data=5912 RW-data=340 ZI-data=16100  
 ".\gdew042t2.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
